console.scanner.cpp
/* Generated by re2c 0.14.3 on Wed Nov 18 13:50:14 2015 */
#line 1 "/home/veei/src/calculator/console.scanner.re"
/**
 * re2c scanner definition for testing console
 * vim: set ts=4 sw=4 tw=0 et syntax=cpp:
 */
#include "console.scanner.h"
#include "console.grammar.h"

#include <string.h>

#include <algorithm>

namespace scanner
{
    namespace console
    {

#line 20 "/home/veei/src/calculator/console.scanner.cpp"

enum YYCONDTYPE {
    yyc0,
    yycexpression,
    yycnormal,
    yycset,
};

#line 17 "/home/veei/src/calculator/console.scanner.re"

        CToken CScanner::operator()(const std::string& expression, CState& state) const
        {
beginning:
            {
                std::string::const_pointer marker;
                std::string::const_pointer cursor = expression.c_str() + state.offset();
                std::string::const_pointer limit = expression.c_str() + expression.length();
                std::string::const_pointer p_start = expression.c_str() + state.offset();
                size_t start = state.offset();


#line 42 "/home/veei/src/calculator/console.scanner.cpp"
                {
                    unsigned char yych;
                    switch (state.condition()) {
                    case yyc0: goto yyc_0;
                    case yycexpression: goto yyc_expression;
                    case yycnormal: goto yyc_normal;
                    case yycset: goto yyc_set;
                    }
/* *********************************** */
yyc_0:
                    state.condition(yycnormal);
#line 53 "/home/veei/src/calculator/console.scanner.re"
                    goto yyc_normal;
#line 56 "/home/veei/src/calculator/console.scanner.cpp"
/* *********************************** */
yyc_expression:
                    yych = (unsigned char)*cursor;
                    switch (yych) {
                    case 0x00:    goto yy7;
                    case 0x01:
                    case 0x02:
                    case 0x03:
                    case 0x04:
                    case 0x05:
                    case 0x06:
                    case 0x07:
                    case 0x08:
                    case '\v':
                    case '\f':
                    case 0x0E:
                    case 0x0F:
                    case 0x10:
                    case 0x11:
                    case 0x12:
                    case 0x13:
                    case 0x14:
                    case 0x15:
                    case 0x16:
                    case 0x17:
                    case 0x18:
                    case 0x19:
                    case 0x1A:
                    case 0x1B:
                    case 0x1C:
                    case 0x1D:
                    case 0x1E:
                    case 0x1F:
                    case '!':
                    case '"':
                    case '#':
                    case '$':
                    case '%':
                    case '&':
                    case '\'':
                    case '(':
                    case ')':
                    case '*':
                    case '+':
                    case ',':
                    case '-':
                    case '.':
                    case '/':
                    case '0':
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9':
                    case ':':
                    case ';':
                    case '<':
                    case '=':
                    case '>':
                    case '?':
                    case '@':
                    case 'A':
                    case 'B':
                    case 'C':
                    case 'D':
                    case 'E':
                    case 'F':
                    case 'G':
                    case 'H':
                    case 'I':
                    case 'J':
                    case 'K':
                    case 'L':
                    case 'M':
                    case 'N':
                    case 'O':
                    case 'P':
                    case 'Q':
                    case 'R':
                    case 'S':
                    case 'T':
                    case 'U':
                    case 'V':
                    case 'W':
                    case 'X':
                    case 'Y':
                    case 'Z':
                    case '[':
                    case '\\':
                    case ']':
                    case '^':
                    case '_':
                    case '`':
                    case 'a':
                    case 'b':
                    case 'c':
                    case 'd':
                    case 'e':
                    case 'f':
                    case 'g':
                    case 'h':
                    case 'i':
                    case 'j':
                    case 'k':
                    case 'l':
                    case 'm':
                    case 'n':
                    case 'o':
                    case 'p':
                    case 'q':
                    case 'r':
                    case 's':
                    case 't':
                    case 'u':
                    case 'v':
                    case 'w':
                    case 'x':
                    case 'y':
                    case 'z':
                    case '{':
                    case '|':
                    case '}':
                    case '~':
                    case 0x7F:    goto yy9;
                    case '\t':
                    case '\n':
                    case '\r':
                    case ' ':    goto yy11;
                    case 0xC2:
                    case 0xC3:
                    case 0xC4:
                    case 0xC5:
                    case 0xC6:
                    case 0xC7:
                    case 0xC8:
                    case 0xC9:
                    case 0xCA:
                    case 0xCB:
                    case 0xCC:
                    case 0xCD:
                    case 0xCE:
                    case 0xCF:
                    case 0xD0:
                    case 0xD1:
                    case 0xD2:
                    case 0xD3:
                    case 0xD4:
                    case 0xD5:
                    case 0xD6:
                    case 0xD7:
                    case 0xD8:
                    case 0xD9:
                    case 0xDA:
                    case 0xDB:
                    case 0xDC:
                    case 0xDD:
                    case 0xDE:
                    case 0xDF:    goto yy13;
                    case 0xE0:    goto yy14;
                    case 0xE1:
                    case 0xE2:
                    case 0xE3:
                    case 0xE4:
                    case 0xE5:
                    case 0xE6:
                    case 0xE7:
                    case 0xE8:
                    case 0xE9:
                    case 0xEA:
                    case 0xEB:
                    case 0xEC:
                    case 0xED:
                    case 0xEE:
                    case 0xEF:    goto yy15;
                    case 0xF0:    goto yy16;
                    case 0xF1:
                    case 0xF2:
                    case 0xF3:    goto yy17;
                    case 0xF4:    goto yy18;
                    default:    goto yy6;
                    }
yy6:
yy7:
                    ++cursor;
#line 100 "/home/veei/src/calculator/console.scanner.re"
                    { return CToken(CToken::ET_EOF, expression.substr(start, cursor - p_start)); }
#line 247 "/home/veei/src/calculator/console.scanner.cpp"
yy9:
                    ++cursor;
#line 99 "/home/veei/src/calculator/console.scanner.re"
                    { state.move(limit - p_start); return CToken(ET_CONSOLE_TAIL,  expression.substr(start, limit - p_start)); }
#line 252 "/home/veei/src/calculator/console.scanner.cpp"
yy11:
                    ++cursor;
                    yych = (unsigned char)*cursor;
                    goto yy20;
yy12:
#line 55 "/home/veei/src/calculator/console.scanner.re"
                    { state.move(cursor - p_start); goto beginning; }
#line 260 "/home/veei/src/calculator/console.scanner.cpp"
yy13:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy9;
                    default:    goto yy6;
                    }
yy14:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy13;
                    default:    goto yy6;
                    }
yy15:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy13;
                    default:    goto yy6;
                    }
yy16:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy15;
                    default:    goto yy6;
                    }
yy17:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy15;
                    default:    goto yy6;
                    }
yy18:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:    goto yy15;
                    default:    goto yy6;
                    }
yy19:
                    ++cursor;
                    yych = (unsigned char)*cursor;
yy20:
                    switch (yych) {
                    case '\t':
                    case '\n':
                    case '\r':
                    case ' ':    goto yy19;
                    default:    goto yy12;
                    }
/* *********************************** */
yyc_normal:
                    yych = (unsigned char)*cursor;
                    switch (yych) {
                    case 0x00:    goto yy24;
                    case 0x01:
                    case 0x02:
                    case 0x03:
                    case 0x04:
                    case 0x05:
                    case 0x06:
                    case 0x07:
                    case 0x08:
                    case '\v':
                    case '\f':
                    case 0x0E:
                    case 0x0F:
                    case 0x10:
                    case 0x11:
                    case 0x12:
                    case 0x13:
                    case 0x14:
                    case 0x15:
                    case 0x16:
                    case 0x17:
                    case 0x18:
                    case 0x19:
                    case 0x1A:
                    case 0x1B:
                    case 0x1C:
                    case 0x1D:
                    case 0x1E:
                    case 0x1F:
                    case '!':
                    case '"':
                    case '#':
                    case '$':
                    case '%':
                    case '&':
                    case '\'':
                    case '(':
                    case ')':
                    case '*':
                    case '+':
                    case ',':
                    case '-':
                    case '/':
                    case '0':
                    case '1':
                    case '2':
                    case '3':
                    case '4':
                    case '5':
                    case '6':
                    case '7':
                    case '8':
                    case '9':
                    case ':':
                    case ';':
                    case '<':
                    case '=':
                    case '>':
                    case '?':
                    case '@':
                    case 'A':
                    case 'B':
                    case 'C':
                    case 'D':
                    case 'E':
                    case 'F':
                    case 'G':
                    case 'H':
                    case 'I':
                    case 'J':
                    case 'K':
                    case 'L':
                    case 'M':
                    case 'N':
                    case 'O':
                    case 'P':
                    case 'Q':
                    case 'R':
                    case 'S':
                    case 'T':
                    case 'U':
                    case 'V':
                    case 'W':
                    case 'X':
                    case 'Y':
                    case 'Z':
                    case '[':
                    case '\\':
                    case ']':
                    case '^':
                    case '_':
                    case '`':
                    case 'a':
                    case 'b':
                    case 'c':
                    case 'd':
                    case 'e':
                    case 'f':
                    case 'g':
                    case 'h':
                    case 'i':
                    case 'j':
                    case 'k':
                    case 'l':
                    case 'm':
                    case 'n':
                    case 'o':
                    case 'p':
                    case 'q':
                    case 'r':
                    case 's':
                    case 't':
                    case 'u':
                    case 'v':
                    case 'w':
                    case 'x':
                    case 'y':
                    case 'z':
                    case '{':
                    case '|':
                    case '}':
                    case '~':
                    case 0x7F:    goto yy26;
                    case '\t':
                    case '\n':
                    case '\r':
                    case ' ':    goto yy28;
                    case '.':    goto yy30;
                    case 0xC2:
                    case 0xC3:
                    case 0xC4:
                    case 0xC5:
                    case 0xC6:
                    case 0xC7:
                    case 0xC8:
                    case 0xC9:
                    case 0xCA:
                    case 0xCB:
                    case 0xCC:
                    case 0xCD:
                    case 0xCE:
                    case 0xCF:
                    case 0xD0:
                    case 0xD1:
                    case 0xD2:
                    case 0xD3:
                    case 0xD4:
                    case 0xD5:
                    case 0xD6:
                    case 0xD7:
                    case 0xD8:
                    case 0xD9:
                    case 0xDA:
                    case 0xDB:
                    case 0xDC:
                    case 0xDD:
                    case 0xDE:
                    case 0xDF:    goto yy31;
                    case 0xE0:    goto yy32;
                    case 0xE1:
                    case 0xE2:
                    case 0xE3:
                    case 0xE4:
                    case 0xE5:
                    case 0xE6:
                    case 0xE7:
                    case 0xE8:
                    case 0xE9:
                    case 0xEA:
                    case 0xEB:
                    case 0xEC:
                    case 0xED:
                    case 0xEE:
                    case 0xEF:    goto yy33;
                    case 0xF0:    goto yy34;
                    case 0xF1:
                    case 0xF2:
                    case 0xF3:    goto yy35;
                    case 0xF4:    goto yy36;
                    default:    goto yy23;
                    }
yy23:
                    cursor = marker;
                    goto yy27;
yy24:
                    ++cursor;
#line 100 "/home/veei/src/calculator/console.scanner.re"
                    { return CToken(CToken::ET_EOF, expression.substr(start, cursor - p_start)); }
#line 782 "/home/veei/src/calculator/console.scanner.cpp"
yy26:
                    ++cursor;
yy27:
#line 99 "/home/veei/src/calculator/console.scanner.re"
                    { state.move(limit - p_start); return CToken(ET_CONSOLE_TAIL,  expression.substr(start, limit - p_start)); }
#line 788 "/home/veei/src/calculator/console.scanner.cpp"
yy28:
                    ++cursor;
                    yych = (unsigned char)*cursor;
                    goto yy59;
yy29:
#line 55 "/home/veei/src/calculator/console.scanner.re"
                    { state.move(cursor - p_start); goto beginning; }
#line 796 "/home/veei/src/calculator/console.scanner.cpp"
yy30:
                    yych = (unsigned char)*(marker = ++cursor);
                    switch (yych) {
                    case 'D':
                    case 'd':    goto yy39;
                    case 'E':
                    case 'e':    goto yy37;
                    case 'S':
                    case 's':    goto yy38;
                    case 'W':
                    case 'w':    goto yy40;
                    default:    goto yy27;
                    }
yy31:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy26;
                    default:    goto yy23;
                    }
yy32:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy31;
                    default:    goto yy23;
                    }
yy33:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy31;
                    default:    goto yy23;
                    }
yy34:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy33;
                    default:    goto yy23;
                    }
yy35:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:
                    case 0x90:
                    case 0x91:
                    case 0x92:
                    case 0x93:
                    case 0x94:
                    case 0x95:
                    case 0x96:
                    case 0x97:
                    case 0x98:
                    case 0x99:
                    case 0x9A:
                    case 0x9B:
                    case 0x9C:
                    case 0x9D:
                    case 0x9E:
                    case 0x9F:
                    case 0xA0:
                    case 0xA1:
                    case 0xA2:
                    case 0xA3:
                    case 0xA4:
                    case 0xA5:
                    case 0xA6:
                    case 0xA7:
                    case 0xA8:
                    case 0xA9:
                    case 0xAA:
                    case 0xAB:
                    case 0xAC:
                    case 0xAD:
                    case 0xAE:
                    case 0xAF:
                    case 0xB0:
                    case 0xB1:
                    case 0xB2:
                    case 0xB3:
                    case 0xB4:
                    case 0xB5:
                    case 0xB6:
                    case 0xB7:
                    case 0xB8:
                    case 0xB9:
                    case 0xBA:
                    case 0xBB:
                    case 0xBC:
                    case 0xBD:
                    case 0xBE:
                    case 0xBF:    goto yy33;
                    default:    goto yy23;
                    }
yy36:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 0x80:
                    case 0x81:
                    case 0x82:
                    case 0x83:
                    case 0x84:
                    case 0x85:
                    case 0x86:
                    case 0x87:
                    case 0x88:
                    case 0x89:
                    case 0x8A:
                    case 0x8B:
                    case 0x8C:
                    case 0x8D:
                    case 0x8E:
                    case 0x8F:    goto yy33;
                    default:    goto yy23;
                    }
yy37:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'X':
                    case 'x':    goto yy52;
                    default:    goto yy23;
                    }
yy38:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'E':
                    case 'e':    goto yy48;
                    default:    goto yy23;
                    }
yy39:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'U':
                    case 'u':    goto yy46;
                    default:    goto yy23;
                    }
yy40:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'H':
                    case 'h':    goto yy41;
                    default:    goto yy23;
                    }
yy41:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'E':
                    case 'e':    goto yy42;
                    default:    goto yy23;
                    }
yy42:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'R':
                    case 'r':    goto yy43;
                    default:    goto yy23;
                    }
yy43:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'E':
                    case 'e':    goto yy44;
                    default:    goto yy23;
                    }
yy44:
                    ++cursor;
#line 57 "/home/veei/src/calculator/console.scanner.re"
                    { state.move(cursor - p_start); return CToken(ET_CONSOLE_SWITCH, expression.substr(start, cursor - p_start)); }
#line 1181 "/home/veei/src/calculator/console.scanner.cpp"
yy46:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'M':
                    case 'm':    goto yy47;
                    default:    goto yy23;
                    }
yy47:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'P':
                    case 'p':    goto yy44;
                    default:    goto yy23;
                    }
yy48:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'T':
                    case 't':    goto yy49;
                    default:    goto yy23;
                    }
yy49:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case '\r':
                    case ' ':
                    case 't':    goto yy50;
                    default:    goto yy23;
                    }
yy50:
                    ++cursor;
                    state.condition(yycset);
#line 60 "/home/veei/src/calculator/console.scanner.re"
                    {
    state.move(cursor - p_start);
    return CToken(ET_CONSOLE_SET_COMMAND, expression.substr(start, cursor - p_start - 1));
}
#line 1219 "/home/veei/src/calculator/console.scanner.cpp"
yy52:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'E':
                    case 'e':    goto yy53;
                    case 'P':
                    case 'p':    goto yy54;
                    default:    goto yy23;
                    }
yy53:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'C':
                    case 'c':    goto yy55;
                    default:    goto yy23;
                    }
yy54:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case 'R':
                    case 'r':    goto yy44;
                    default:    goto yy23;
                    }
yy55:
                    yych = (unsigned char)*++cursor;
                    switch (yych) {
                    case '\r':
                    case ' ':
                    case 't':    goto yy56;
                    default:    goto yy23;
                    }
yy56:
                    ++cursor;
                    state.condition(yycexpression);
#line 66 "/home/veei/src/calculator/console.scanner.re"
                    {
    state.move(cursor - p_start);
    return CToken(ET_CONSOLE_EXEC_COMMAND, expression.substr(start, cursor - p_start - 1));
}
#line 1259 "/home/veei/src/calculator/console.scanner.cpp"
yy58:
                    ++cursor;
                    yych = (unsigned char)*cursor;
yy59:
                    switch (yych) {
                    case '\t':
                    case '\n':
                    case '\r':
                    case ' ':    goto yy58;
                    default:    goto yy29;
                    }
/* *********************************** */
yyc_set:
                    yych = (unsigned char)*cursor;
                    switch (yych) {
                    case 0x00:    goto yy63;
                    case 0x01:
                    case 0x02:
                    case 0x03:
                    case 0x04:
                    case 0x05:
                    case 0x06:
                    case 0x07:
                    case 0x08:
                    case '\v':
                    case '\f':
                    case 0x0E:
                    case 0x0F:
                    case 0x10:
                    case 0x11:
                    case 0x12:
                    case 0x13:
                    case 0x14:
                    case 0x15:
                    case 0x16:
                    case 0x17:
                    case 0x18:
                    case 0x19:
                    case 0x1A:
                    case 0x1B:
                    case 0x1C:
                    case 0x1D:
                    case 0x1E:
                    case 0x1F:
                    case '!':
                    case '#':
                    case '$':
                    case '%':
                    case '&':
                    case '\'':
                    case '(':
                    case ')':
                    case '*':
                    case '+':
                    case ',':
                    case '-':
